--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "@/*": ["./*"] }
     "target": "es2022",
     "lib": ["dom", "dom.iterable", "es2022"],
     "allowJs": true,
