--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
   "next": "^14.0.0",
   "react": "^18.0.0",
   "react-dom": "^18.0.0"
-}
+},
+  "devDependencies": {
+    "typescript": "^5.5.4",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.14.10"
+  }
 }
 
