--- a/package.json
+++ b/package.json
@@ -3,30 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "dev": "next dev --port 3000",
-    "build": "next build",
-    "start": "next start -p 3000"
+  "engines": {
+    "node": ">=20 <21"
   },
-"dependencies": {
-  "@supabase/supabase-js": "^2.0.0",
-  "next": "^14.0.0",
-  "react": "^18.0.0",
-  "react-dom": "^18.0.0"
-},
-  "devDependencies": {
-    "typescript": "^5.5.4",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.14.10",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^14.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.2.0",
-    "typescript": "^5.4.0"
-
-  },
+  "packageManager": "npm@10",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -35,6 +15,22 @@
     "typecheck": "tsc --noEmit",
     "format": "prettier --check .",
     "format:fix": "prettier --write ."
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.0.0",
+    "next": "^14.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^14.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "prettier": "^3.2.0",
+    "typescript": "^5.5.4"
   }
 }
-
