--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.14.10",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^9.0.0",
-    "eslint-config-next": "^14.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.32",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": "^3.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0"
   }
 }
