--- a/.github/workflows/refresh-lockfile.yml
+++ b/.github/workflows/refresh-lockfile.yml
@@ -1,11 +1,8 @@
-name: Refresh lockfile (Linux)
+name: Refresh lockfile
 on:
   workflow_dispatch:
-  push:
-    paths:
-      - "package.json"
 jobs:
-  lockfile:
+  refresh:
     permissions:
       contents: write
     runs-on: ubuntu-latest
@@ -14,21 +11,13 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-      # Nettoyage pour forcer une résolution propre
-      - run: rm -rf node_modules package-lock.json
-      # Génère un package-lock.json compatible Linux sans installer dans node_modules
-      - run: npm install --package-lock-only
-      # Assure la cohérence en simulant une install CI
-      - run: npm ci
-      - name: Commit lockfile if changed
+      - run: npm install --no-audit --no-fund
+      - name: Commit updated lockfile
         run: |
           if [ -n "$(git status --porcelain package-lock.json)" ]; then
             git config user.name "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add package-lock.json
-            git commit -m "chore: refresh lockfile for Linux (SWC deps)"
+            git commit -m "chore(lockfile): refresh after eslint downgrade"
             git push
-          else
-            echo "No changes to lockfile."
           fi
