--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
+  "singleQuote": true,
+  "arrowParens": "avoid",
+  "printWidth": 120,
   "semi": true,
-  "singleQuote": false,
   "trailingComma": "all",
-  "printWidth": 100,
-  "tabWidth": 2,
-  "arrowParens": "always"
+  "endOfLine": "lf"
 }
