--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
-  "root": true,
   "extends": ["next/core-web-vitals", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "error",
-    "@next/next/no-html-link-for-pages": "off"
-  },
-  "ignorePatterns": ["node_modules/", ".next/", "out/"]
+    "prettier/prettier": "error"
+  }
 }
