--- a/package.json
+++ b/package.json
@@ -1,36 +1,29 @@
 {
   "name": "covoit-app",
-  "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "engines": {
-    "node": ">=20 <21"
-  },
-  "packageManager": "npm@10",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "format": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "lint": "eslint .",
+    "format": "prettier --write .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0",
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "@supabase/supabase-js": "^2.45.4",
+    "@supabase/ssr": "^0.5.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "zod": "^3.23.8"
   },
-"devDependencies": {
-  "@types/node": "^20.14.10",
-  "@types/react": "^18.3.5",
-  "@types/react-dom": "^18.3.0",
-  "eslint": "^8.57.0",
-  "eslint-config-next": "^14.2.32",
-  "eslint-config-prettier": "^9.0.0",
-  "eslint-plugin-prettier": "^5.0.0",
-  "prettier": "^3.2.0",
-  "typescript": "^5.5.4"
+  "devDependencies": {
+    "@types/node": "^20.14.9",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.9.0",
+    "eslint-config-next": "14.2.5",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4"
   }
 }
