--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,6 @@
-// .prettierrc
 {
-  "singleQuote": true,
-  "arrowParens": "avoid",
-  "printWidth": 120,
+  "singleQuote": false,
   "semi": true,
   "trailingComma": "all",
-  "endOfLine": "lf"
+  "printWidth": 100
 }
