--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,19 @@
-# .github/workflows/ci.yml
 name: CI
-
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
-
+  push:
+    branches: [main]
 jobs:
-  quality:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
-
-      - name: Install deps
-        run: npm ci --no-audit --no-fund
-
-      - name: Prettier check
-        run: npx prettier --check .
-
-      - name: ESLint
-        run: npx next lint
-
-      - name: TypeScript
-        run: npx tsc --noEmit
-
-      - name: Next build (dry-run qualité)
-        run: npx next build
+      - run: npm ci
+      - run: npm run format -- --check
+      - run: npm run lint
+      - run: npm run typecheck
+      - run: npm run build
