--- a/package.json
+++ b/package.json
@@ -1,30 +1,34 @@
-{
-  "name": "covoit-app",
-  "private": true,
-  "engines": { "node": "20.x" },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint .",
-    "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.45.4",
-    "@supabase/ssr": "^0.5.0",
-    "next": "14.2.5",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20.14.9",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.5",
-    "prettier": "^3.3.3",
-    "typescript": "^5.5.4"
-  }
-}
+ {
+   "name": "covoit-app",
+   "private": true,
+   "engines": { "node": "20.x" },
+   "scripts": {
+     "dev": "next dev",
+     "build": "next build",
+     "start": "next start",
+     "lint": "eslint .",
+     "format": "prettier --write .",
+-    "typecheck": "tsc --noEmit"
++    "typecheck": "tsc --noEmit",
++    "postinstall": "prisma generate"
+   },
+   "dependencies": {
++    "@prisma/client": "^5.18.0",
+     "@supabase/supabase-js": "^2.45.4",
+     "@supabase/ssr": "^0.5.0",
+     "next": "14.2.5",
+     "react": "18.3.1",
+     "react-dom": "18.3.1",
+     "zod": "^3.23.8"
+   },
+   "devDependencies": {
++    "prisma": "^5.18.0",
+     "@types/node": "^20.14.9",
+     "@types/react": "^18.3.3",
+     "@types/react-dom": "^18.3.0",
+     "eslint": "^8.57.0",
+     "eslint-config-next": "14.2.5",
+     "prettier": "^3.3.3",
+     "typescript": "^5.5.4"
+   }
+ }
