--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "installCommand": "npm ci",
-  "buildCommand": "npm ci && npx prisma generate && npm run build"
+  "installCommand": "npm install --no-audit --no-fund",
+  "buildCommand": "npm run build"
 }
