--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "prisma": { "schema": "prisma/schema.prisma" },
     "@prisma/client": "^5.18.0",
     "@supabase/supabase-js": "^2.45.4",
     "@supabase/ssr": "^0.5.0",
