--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,21 +5,15 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "preserve",
-    "allowJs": false,
+    "noEmit": true,
     "strict": true,
-    "noImplicitOverride": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
     "esModuleInterop": true,
-    "incremental": true,
-    "plugins": [{ "name": "next" }],
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
+
     "baseUrl": ".",
-    "paths": { "@/*": ["src/*"]
+    "paths": {
+      "@/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
