--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.25.6"
+    "zod": "3.25.6",
+    "@octokit/rest": "^19.0.0"
   },
   "devDependencies": {
     "prisma": "5.22.0",
