--- a/package.json
+++ b/package.json
@@ -6,30 +6,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start", 
+    "start": "next start",
     "lint": "eslint .",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
     "postinstall": "sh -c 'if [ -f prisma/schema.prisma ]; then prisma generate; else echo \"Skip prisma generate (no schema)\"; fi'"
   },
   "dependencies": {
+    "@octokit/rest": "19.0.0",
     "@prisma/client": "5.22.0",
     "@supabase/supabase-js": "2.45.4",
     "@supabase/ssr": "0.5.2",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.25.6",
-    "@octokit/rest": "^19.0.0"
+    "zod": "3.25.6"
   },
   "devDependencies": {
-    "prisma": "5.22.0",
     "@types/node": "20.14.9",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
     "prettier": "3.3.3",
+    "prisma": "5.22.0",
     "typescript": "5.5.4"
   }
 }
